despatma/tests/fail/abstract_factory/missing_interpolation.stderr
error[E0277]: the trait bound `GnomeFactory: Factory<Window>` is not satisfied
  --> $DIR/missing_interpolation.rs:18:6
   |
13 | #[abstract_factory(Factory, dyn Button, Window)]
   | ------------------------------------------------ required by this bound in `AbstractGuiFactory`
14 | pub trait AbstractGuiFactory {}
   |           ------------------ required by a bound in this
...
18 | impl AbstractGuiFactory for GnomeFactory {}
   |      ^^^^^^^^^^^^^^^^^^ the trait `Factory<Window>` is not implemented for `GnomeFactory`

error[E0277]: the trait bound `GnomeFactory: Factory<(dyn Button + 'static)>` is not satisfied
  --> $DIR/missing_interpolation.rs:18:6
   |
13 | #[abstract_factory(Factory, dyn Button, Window)]
   | ------------------------------------------------ required by this bound in `AbstractGuiFactory`
14 | pub trait AbstractGuiFactory {}
   |           ------------------ required by a bound in this
...
18 | impl AbstractGuiFactory for GnomeFactory {}
   |      ^^^^^^^^^^^^^^^^^^ the trait `Factory<(dyn Button + 'static)>` is not implemented for `GnomeFactory`
